14-Ingress-SSL-with-LetsEncrypt/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: sapp1.aks-failover.hellokitty.petlover2023.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port:
                  number: 80
    - host: sapp2.aks-failover.hellokitty.petlover2023.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port:
                  number: 80
  tls:
    - hosts:
        - sapp1.aks-failover.hellokitty.petlover2023.com
      secretName: sapp1-petlover-secret
    - hosts:
        - sapp2.aks-failover.hellokitty.petlover2023.com
      secretName: sapp2-petlover-secret
